# aedist

./: .gitignore  ADR.md  Makefile  README.md  TODO.md  models.yaml  models_padme.yaml  pyproject.toml
compare/: reconcile.py  reconciliation_results.csv  reconciliation_results_RAGs_perfect.csv  utils.py
compare/Matching/: phased.py
compare/PowerPlantDataframeCleaner/: cleaner.py  cleaner_DOC.md  config.json  config_DOC.md  test_cleaner.py
compare/input/: Claude_RAG18_prompt2.csv  GEM.csv  GEM_aggregate.py  HDM_aggregate.py
data/reference/: gem_thermal.csv  vietnam_thermal_units_v1.csv  vietnam_thermal_v1.csv  vietnam_thermal_v1_raw.csv
diagrams/: AEDIST-2025-01-15-171936.mmd  Architecture linking Ontologies and Graphical RAG
mergetables/: mergetables.py
outputs/llm_direct/: claude_sonnet_concise.csv  claude_sonnet_normal.csv
outputs/llm_multiturn/: claude_sonnet_normal_1relance.csv
outputs/rag_curated/: claude_sonnet_rag18_1relance.csv
paper/: paper_benchmark_merged.md
pdfOCR2md/: Makefile  pdfOCR2md.py
prompts/: followups.txt  prompt_structured.txt
reference/: Thermal projects in Vietnam.ods
results/summary/: all_metrics.json
scripts/: query_padme.py  summarize_sweep.py  sweep1_census.sh
src/aedist/: __init__.py  extract.py  harness.py  metrics.py  (+8 more)
sweeps/: sweep1_census.yaml  sweep1_padme.yaml  sweep2_multiturn.yaml  sweep2_rag.yaml  sweep2_web.yaml
tests/: test_cleaner.py  test_harness.py  test_integration.py  test_matching.py  test_models.py  test_query.py  test_query_multiturn.py  test_query_rag.py  test_query_web.py  test_verify.py
(+3 files in other folders)
